--- a/SeleniumCSharp/SeleniumCSharp.csproj
+++ b/SeleniumCSharp/SeleniumCSharp.csproj
@@ -14,6 +14,26 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.2.0" />
+    <PackageReference Include="Selenium.Support" Version="4.2.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="102.0.5005.6102" />
+    <PackageReference Include="ExtentReports" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Selenium.WebDriver" />
+    <None Remove="Selenium.Support" />
+    <None Remove="Selenium.WebDriver.ChromeDriver" />
+    <None Remove="ExtentReports" />
+    <None Remove="TestScripts\" />
+    <None Remove="TestScripts\Sogeti\" />
+    <None Remove="PageObjects\" />
+    <None Remove="PageObjects\Sogeti\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TestScripts\" />
+    <Folder Include="TestScripts\Sogeti\" />
+    <Folder Include="PageObjects\" />
+    <Folder Include="PageObjects\Sogeti\" />
+  </ItemGroup>
 </Project>
